# wrapper-service

./: AGENTS.MD  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  app.py  requirements.txt
.github/workflows/: e2e-tests.yml  test.yml
scripts/: chatgpt_browser_bridge.py
src/: bridge.rs  config.rs  lib.rs  main.rs  state.rs
src/api/: handlers.rs  mod.rs  models.rs
tests/: ask_e2e.rs  test_app.py  test_chatgpt_browser_bridge.py
tests/e2e/: test_ask_e2e.py
